<resources>
    <string name="app_name">Stauc</string>

    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="bids">Bids</string>
    <string name="messages">Messages</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_buyer">Contact Buyer</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="history">History</string>
    <string name="search_history">Search History</string>
    <string name="nothing_here">Nothing Here!</string>
    <string name="no_results_found">No Results Found!</string>
    <string name="so_empty">So Empty!</string>
    <string name="upload_date_holder">Uploaded —/—/—</string>
    <string name="time_holder">00:00</string>
    <string name="filters">Filters</string>
    <string name="clear_history">Clear History</string>
    <string name="select_category">Select Category</string>
    <string name="select_a_category">Select a category</string>
    <string name="select_location">Select Location</string>
    <string name="anywhere">Anywhere</string>
    <string name="specific_location">Specific Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="around_me">Around Me(Requires GPS)</string>
    <string name="set_price_range">Set Price Range</string>
    <string name="edit_amenities">Edit Amenities</string>
    <string name="atleast">Atleast</string>
    <string name="reset">Reset</string>
    <string name="from_price_warning">A lower value is required here</string>
    <string name="to_price_warning">A larger value is required here</string>
    <string name="spaced_input">Please, remove any spaces.</string>
    <string name="non_alphanumeric">Please, use alphanumeric characters only</string>
    <string name="non_alphabetic">Please, use alphabetic characters only</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="filters_cleared">Cleared Filters successfully</string>

    <string name="edit">Edit</string>
    <string name="saved">Saved</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="double_dash_holder">--</string>
    <string name="loading_dot">Loading…</string>
    <string name="save_filter">Save Filter</string>
    <string name="recent_bids">Recent Bids</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="number_min_price">1000</string>
    <string name="number_max_price">40M</string>
    <string name="value_is_required">A value is required!</string>
    <string name="dialog_filter_save_title">Enter Filter Name</string>
    <string name="dialog_filter_save_hint">MyNamedFilter</string>
    <string name="date_picker_title">Pick Date</string>

    <string name="welcome">Welcome</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="contact_details">Contact Details</string>
    <string name="send_buy_request">Send Buy Request</string>
    <string name="bid">BID</string>
    <string name="place_bid">Place Bid</string>
    <string name="price">Price</string>
    <string name="operation_undone">This operation cannot be undone.</string>

    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="telephone">Telephone</string>
    <string name="telephone_whatsapp">Telephone/WhatsApp</string>
    <string name="email_hint">someone@example.com</string>
    <string name="password_hint">password</string>
    <string name="show_password">Show password</string>
    <string name="tel_hint">0711134589</string>
    <string name="done">Done</string>
    <string name="continue_word">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="upload">Upload</string>
    <string name="confirm_caps">CONFIRM</string>
    <string name="cancel_caps">CANCEL</string>

    <string name="category_scholastics">Scholastics</string>
    <string name="category_clothes">Clothes</string>
    <string name="category_beddings">Beddings</string>
    <string name="category_all">All</string>
    <string name="category_furniture">Furniture</string>
    <string name="category_electronics">Electronics</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_miscellaneous">Miscellaneous</string>

    <string name="register_button">Register</string>
    <string name="register_as">Register As</string>
    <string name="login_button">Login</string>
    <string name="save">Save</string>
    <string name="logout">Log out</string>
    <string name="login">Log in</string>
    <string name="transactions">Transactions</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="my_profile">My Profile</string>
    <string name="my_uploads">My Uploads</string>

    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="empty_field">This Field is required!</string>
    <string name="email_exists">Email already exists!</string>
    <string name="username_exists">Username already exists!</string>
    <string name="longer_filename_error">Enter a longer item name</string>
    <string name="buy_now_tag">Buy now at UGX</string>
    <string name="my_bids">My Bids</string>
    <string name="place_bid_caps">PLACE BID</string>

    <string name="see_all">See all</string>
    <string name="details">Details</string>
    <string name="description_capital">DESCRIPTION</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="for_sale">For Sale</string>
    <string name="owner_details">Owner Details</string>
    <string name="posted_by">Posted By:</string>
    <string name="auction_ends_in">Auction ends in</string>
    <string name="auction_ended">Auction ended</string>
    <string name="item_not_available">Item Not Available!</string>
    <string name="hours_short">hrs</string>
    <string name="days_short">days</string>
    <string name="timestamp_holder">--:--:--</string>
    <string name="or">OR</string>
    <string name="buy_now">BUY NOW</string>
    <string name="expected_ugx">Expected : UGX</string>
    <string name="start_price_ugx">Start Price : UGX</string>
    <string name="auction_failed">Auction Failed!</string>
    <string name="auction_succeeded">Auction Succeeded</string>
    <string name="time_not_synced">Your time is not synced!</string>

    <string name="description_improv">No description.</string>
    <string name="currency_code">UGX</string>

    <string name="add_photo_error">Add at least one photo</string>
    
    <string name="upload_date_ascending">Upload Date(Recent First)</string>
    <string name="upload_date_descending">Upload Date(Recent Last)</string>
    <string name="end_date_ascending">End Date(Closest First)</string>
    <string name="end_date_descending">End Date(Furthest First)</string>
    <string name="name_ascending">Name (A-Z)</string>
    <string name="name_descending">Name (Z-A)</string>
    <string name="price_ascending">Price (Low-High)</string>
    <string name="price_descending">Price (High-Low)</string>

    <string name="message_item_owner">Message Item Owner</string>
    <string name="start_price">Start Price</string>
    <string name="reserve_price">Reserve Price</string>
    <string name="start_price_description">This is the minimum amount that you want bidding to start from.</string>
    <string name="reserve_price_description">This is the minimum amount you expect to get from posting this item. Or that
    you want a buyer to pay for to get this item immediately</string>
</resources>