<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frame_container">
    <LinearLayout
        android:id="@+id/parent_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:background="@drawable/gradient_blue_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/register"
            android:textStyle="bold"
            android:color="@color/black"
            android:layout_margin="15dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/aller_bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="75dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/avator0"
                android:scaleType="centerCrop"
                android:background="@drawable/circle"/>
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/AuthTextView"
            android:text="@string/fname"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id = "@+id/fnameEditor"
            android:layout_width="match_parent"
            style="@style/InputView"
            android:inputType="textPersonName" />

        <TextView
        style="@style/AuthTextView"
        android:text="@string/lname"/>

        <EditText
            android:id = "@+id/lnameEditor"
            android:layout_width="match_parent"
            style="@style/InputView"
            android:inputType="textPersonName" />

        <TextView
            style="@style/AuthTextView"
            android:text="@string/email"/>

        <EditText
            android:id = "@+id/emailEditor"
            android:layout_width="match_parent"
            style="@style/InputView"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/AuthTextView"
            android:text="@string/password"/>

        <EditText
            android:id = "@+id/passwordEditor"
            android:layout_width="match_parent"
            style="@style/InputView"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:imeOptions="actionGo"
            android:drawableRight="@drawable/ic_baseline_eye_24"/>

        <TextView
            style="@style/AuthTextView"
            android:text="@string/telephone"/>

        <EditText
            android:id = "@+id/telEditor"
            android:layout_width="match_parent"
            style="@style/InputView"
            android:hint="@string/tel_hint"
            android:inputType="phone"
            android:imeOptions="actionGo"/>

        <Button
            android:id="@+id/continue_button"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/continue_word"
            android:fontFamily="@font/aller_bold"/>

    </LinearLayout>
    </FrameLayout>
</ScrollView>