<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/filter_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/gray_battleship"
            tools:text="filter_0_999M_33"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <LinearLayout
            android:id="@+id/check_box_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_battleship"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_price_range"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/text_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="@color/dodger_blue"
                android:layout_gravity="end|center_vertical"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="16sp"
                android:textColor="@color/gray_battleship"
                android:gravity="center"/>
            <TextView
                android:id="@+id/currency_view_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code"
                android:textSize="18sp"
                android:textColor="@color/gray_battleship"
                tools:ignore="Autofill,LabelFor" />
            <EditText
                android:id="@+id/edit_currency_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_min_price"
                android:textSize="18sp"
                android:inputType="number"
                android:maxLength="13"
                android:textColor="@color/black"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="16sp"
                android:textColor="@color/gray_battleship"
                android:gravity="center"/>
            <TextView
                android:id="@+id/currency_view_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code"
                android:textSize="18sp"
                android:textColor="@color/gray_battleship"
                tools:ignore="Autofill,LabelFor" />
            <EditText
                android:id="@+id/edit_currency_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_max_price"
                android:textSize="18sp"
                android:inputType="number"
                android:maxLength="13"
                android:textColor="@color/black"
                tools:ignore="Autofill,LabelFor" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_battleship"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_save"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save_filter"
                android:layout_gravity="start"/>
            <Button
                android:id="@+id/button_apply"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/apply_filter"
                android:layout_gravity="end"/>
        </FrameLayout>

    </LinearLayout>

</ScrollView>