<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_container">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/gradient_blue_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/welcome"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/aller_bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue_vertical_light"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/aller_light"/>

            <EditText
                android:id="@+id/login_email_editor"
                android:layout_width="match_parent"
                style="@style/InputView"
                android:layout_marginTop="6dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aller_light"/>

                <EditText
                    android:id="@+id/login_password_editor"
                    android:layout_width="match_parent"
                    style="@style/InputView"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:imeOptions="actionGo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_margin="4dp">
                    <CheckBox
                        android:id="@+id/remember_me_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:text="@string/remember_me"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/aller_regular"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="end">
                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/forgot_password"
                        android:textSize="14sp"
                        android:textColor="@color/purple_300"
                        android:fontFamily="@font/aller_regular"/>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:textSize="20sp"
                    android:text="@string/login_button"
                    android:fontFamily="@font/aller_bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="end|center_vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/dont_have_account"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/aller_light"
                        android:layout_marginEnd="5dp" />
                    <TextView
                        android:id="@+id/sign_in_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sign_up"
                        android:textSize="14sp"
                        android:textColor="@color/purple_300"
                        android:fontFamily="@font/aller_regular"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</FrameLayout>