<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/item_photo_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/recycler_title_view">
            <ImageView
                android:id="@+id/recycler_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_image_400"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/recycler_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/aller_regular"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/price_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="HELLO" />

        <LinearLayout
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/auction_count_layout"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bid"
                android:fontFamily="@font/aller_light"
                android:singleLine="true"
                android:textColor="@color/gray_battleship"
                android:textStyle="bold"
                android:textSize="12sp"/>
            <ImageView
                android:id="@+id/cash_icon"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ic_baseline_dot_24"
                android:contentDescription="@string/price"
                android:layout_margin="2dp"
                app:tint="@color/gray_battleship"/>

            <TextView
                android:id="@+id/recycler_price_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aller_light"
                android:singleLine="true"
                android:textColor="@color/gray_battleship"
                android:textStyle="bold"
                android:textSize="12sp"
                tools:text="UGX 15000"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/auction_count_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/auction_end_label_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/auction_ends_in"/>
            <TextView
                android:id="@+id/auction_count_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp_holder"
                android:layout_marginLeft="4dp"
                android:textSize="12sp"
                android:layout_marginRight="4dp"/>
            <TextView
                android:id="@+id/auction_time_format_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/hours_short"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>